Added gdd to game

--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,48 @@
     </style>
   </head>
   <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+    <div id="gdd">
+      <figure>
+          <img src="assets/gdd/SplashScreen.png">
+          <figcaption>The Cateroids splash screen</figcaption>
+      </figure>
+      <figure>
+          <img src="assets/gdd/MainMenu.png">
+          <figcaption>The Cateroids main menu</figcaption>
+      </figure>
+      <figure>
+          <img src="assets/gdd/LevelSelect.png">
+          <figcaption>The Cateroids level select screen</figcaption>
+      </figure>
+      <figure>
+          <img src="assets/gdd/HelpScreen1.png">
+          <figcaption>Help screen 1</figcaption>
+      </figure>
+      <figure>
+          <img src="assets/gdd/HelpScreen2.png">
+          <figcaption>Help screen 2</figcaption>
+      </figure>
+      <figure>
+          <img src="assets/gdd/HelpScreen3.png">
+          <figcaption>Help screen 3</figcaption>
+      </figure>
+      <figure>
+          <img src="assets/gdd/CatControlScreen.png">
+          <figcaption>The controls for the cat, our protagonist</figcaption>
+      </figure>
+      <figure>
+          <img src="assets/gdd/CatGameScreen.png">
+          <figcaption>The game screen of the cat</figcaption>
+      </figure>
+      <figure>
+          <img src="assets/gdd/DogControlScreen.png">
+          <figcaption>The controls for the dog, our antagonist</figcaption>
+      </figure>
+      <figure>
+          <img src="assets/gdd/DogGameScreen.png">
+          <figcaption>The game screen of the dog</figcaption>
+      </figure>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
 
     <script>
       document.addEventListener('DOMContentLoaded', function() {
