--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <style>
-            body{
-                background-color: black;
-            }
-        </style>
-    </head>
-    <body>
-        <script src="scripts/phaser.min.js"></script>
-        <script src="js/helpers.js"></script>
-        <script src="js/scenes/loadScene.js"></script>
-        <script src="js/scenes/splashScene.js"></script>
-        <script src="js/scenes/helpScene.js"></script>
-        <script src="js/scenes/levelsScene.js"></script>
-        <script src="js/scenes/startScene.js"></script>
-        <script src="js/scenes/gameScene.js"></script>
-        <script src="js/main.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta lang="en-us" />
+    <title>Cateroids</title>
+    <script src="js/phaser.min.js"></script>
+  </head>
+
+  <body>
+    <script src="js/utils/keys.js"></script>
+    <script src="js/utils/config.js"></script>
+    <script src="js/utils/utils.js"></script>
+
+    <script src="js/Entities.js"></script>
+    <script src="js/scenes/LoadScene.js"></script>
+    <script src="js/scenes/SplashScene.js"></script>
+    <script src="js/scenes/SceneMainMenu.js"></script>
+    <script src="js/scenes/SceneMain.js"></script>
+    <script src="js/game.js"></script>
+  </body>
 </html>
