Main Menu Created

--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -15,6 +15,7 @@
     <script src="js/Entities.js"></script>
     <script src="js/scenes/LoadScene.js"></script>
     <script src="js/scenes/SplashScene.js"></script>
+    <script src="js/scenes/StartMenuScene.js"></script>
     <script src="js/scenes/SceneMainMenu.js"></script>
     <script src="js/scenes/SceneMain.js"></script>
     <script src="js/game.js"></script>
