--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -11,11 +11,13 @@
     <script src="js/utils/keys.js"></script>
     <script src="js/utils/config.js"></script>
     <script src="js/utils/utils.js"></script>
+    <script src="js/utils/text.js"></script>
 
     <script src="js/Entities.js"></script>
     <script src="js/scenes/LoadScene.js"></script>
     <script src="js/scenes/SplashScene.js"></script>
     <script src="js/scenes/StartMenuScene.js"></script>
+    <script src="js/scenes/HelpScene.js"></script>
     <script src="js/scenes/SceneMainMenu.js"></script>
     <script src="js/scenes/SceneMain.js"></script>
     <script src="js/game.js"></script>
