--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -18,6 +18,7 @@
     <script src="js/scenes/SplashScene.js"></script>
     <script src="js/scenes/StartMenuScene.js"></script>
     <script src="js/scenes/HelpScene.js"></script>
+    <script src="js/scenes/LevelSelectScene.js"></script>
     <script src="js/scenes/SceneMainMenu.js"></script>
     <script src="js/scenes/SceneMain.js"></script>
     <script src="js/game.js"></script>
