--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -5,6 +5,12 @@
     <meta lang="en-us" />
     <title>Cateroids</title>
     <script src="js/phaser.min.js"></script>
+    <style>
+      *{
+        margin: 0px;
+        overflow: hidden;
+      }
+    </style>
   </head>
 
   <body>
