--- a/public/benchmark2/index.html
+++ b/public/benchmark2/index.html
@@ -22,6 +22,7 @@
     <script src="js/Entities.js"></script>
     <script src="js/scenes/LoadScene.js"></script>
     <script src="js/scenes/PauseScene.js"></script>
+    <script src="js/scenes/GameOverScene.js"></script>
     <script src="js/scenes/SplashScene.js"></script>
     <script src="js/scenes/StartMenuScene.js"></script>
     <script src="js/scenes/HelpScene.js"></script>
