--- a/benchmark3/client/index.html
+++ b/benchmark3/client/index.html
@@ -17,7 +17,8 @@
     <script src="js/utils/config.js"></script>
     <script src="js/utils/text.js"></script>
     <script type="module" src="js/utils/utils.js"></script>
-
+    
+    <script type="module" src="js/AI.js"></script>
     <script type="module" src="js/Entities.js"></script>
     <script type="module" src="js/scenes/LoadScene.js"></script>
     <script type="module" src="js/scenes/PauseScene.js"></script>
