--- a/public/benchmark3/index.html
+++ b/public/benchmark3/index.html
@@ -16,13 +16,14 @@
   <body>
     <script src="js/utils/config.js"></script>
     <script src="js/utils/text.js"></script>
-
+    
     <!-- <script type="module" src="js/AI.js"></script>
     <script type="module" src="js/Collisions.js"></script>
     <script type="module" src="js/Entities.js"></script>
     <script type="module" src="js/FrustumCulling.js"></script>
     <script type="module" src="js/MapLoading.js"></script>
-    <script type="module" src="js/SceneUtils.js"></script> -->
+    <script type="module" src="js/SceneUtils.js"></script> 
+    <script src="js/utils/Goals.js"></script>-->
 
     <script type="module" src="js/scenes/CheatMenuScene.js"></script>
     <script type="module" src="js/scenes/GameOverScene.js"></script>
