renamed loadScene to preloadScene

--- a/public/final/index.html
+++ b/public/final/index.html
@@ -29,7 +29,7 @@
     <script type="module" src="js/scenes/GameOverScene.js"></script>
     <script type="module" src="js/scenes/HelpScene.js"></script>
     <script type="module" src="js/scenes/LevelSelectScene.js"></script>
-    <script type="module" src="js/scenes/LoadScene.js"></script>
+    <script type="module" src="js/scenes/PreloadScene.js"></script>
     <script type="module" src="js/scenes/PauseScene.js"></script>
     <script type="module" src="js/scenes/SceneMain.js"></script>
     <script type="module" src="js/scenes/SplashScene.js"></script>
