Added end of game scene Fixed some colors

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
     <script type="module" src="js/scenes/SceneMain.js"></script>
     <script type="module" src="js/scenes/SplashScene.js"></script>
     <script type="module" src="js/scenes/StartMenuScene.js"></script>
+    <script type="module" src="js/scenes/UpgradeScene.js"></script>
+    <script type="module" src="js/scenes/GoalScene.js"></script>
+    <script type="module" src="js/scenes/EndScene.js"></script>
     <script type="module" src="js/game.js"></script>
   </body>
 </html>
