Fixed firebase not deploying properly

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <script type="module" src="js/scenes/PreloadScene.js"></script>
     <script type="module" src="js/scenes/PauseScene.js"></script>
     <script type="module" src="js/scenes/SceneMain.js"></script>
-    <script type="module" src="js/scenes/splashScene.js"></script>
+    <script type="module" src="js/scenes/SplashScene.js"></script>
     <script type="module" src="js/scenes/StartMenuScene.js"></script>
     <script type="module" src="js/scenes/UpgradeScene.js"></script>
     <script type="module" src="js/scenes/GoalScene.js"></script>
